# ds-wagtail-ingest

./: .env.example  .gitignore  .platform.app.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  terms.csv
.platform/: services.yaml
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py
templates/: base.html
templates/collections/: category_page.html  category_page_before_results_page.html  content_hub_page.html  explorer_page.html  filter_page.html
templates/exhibitions/: exhibition_page.html
templates/lessons/: learning_resource_page.html
templates/research/: research_guide_page.html
tna/blog/: models.py
tna/blog/migrations/: 0001_initial.py  0002_auto_20210216_1412.py  0003_add_rich_text_field.py
tna/collections/: blocks.py  models.py
tna/collections/migrations/: 0001_initial.py  0002_auto_20210202_1028.py  0002_auto_20210216_1616.py  0002_auto_20210318_1526.py  0003_auto_20210202_1441.py  0003_auto_20210216_1921.py  0003_auto_20210318_1533.py  0004_add_results_page.py  0004_auto_20210202_1517.py  0004_auto_20210318_1536.py  0005_auto_20210202_1523.py  0005_explorerpage_introduction.py  0005_remove_content_hub.py  0006_audioindexpage_videoindexpage.py  0006_pagecategory.py  0007_auto_20210203_1206.py  0007_record_held_by.py  0008_auto_20210205_1429.py  0008_auto_20210323_1453.py  0009_auto_20210205_1432.py  (+1 more)
tna/exhibitions/: models.py
tna/home/: models.py
tna/hubs/: blocks.py  models.py
tna/insights/: models.py
tna/lessons/: models.py
tna/media/: models.py
tna/research/: models.py
(+39 files in other folders)
